# poker-cfr-solver

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: poker-cfr-solver.tex
examples/: demo.py
src/: __init__.py  cli.py
src/core/: __init__.py  cfr.py  cfr_plus.py  exploitability.py  mccfr.py  regret_matching.py
src/games/: __init__.py  game_base.py  kuhn_poker.py  leduc_holdem.py
src/viz/: __init__.py  app.py
tests/: __init__.py  test_cfr.py  test_exploitability.py  test_kuhn.py
